# rcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  PUBLISHING.md  README.md  SECURITY.md  rcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_rfd.yml  config.yml
.github/workflows/: deploy-site.yml  docs.yml  release.yml
conformance/: check.py
docs/: README.md  build_spec.py  docs.json  index.html  index.mdx  llms.txt
docs/assets/: style.css
docs/community/: brand.mdx  conduct.mdx  contributing.mdx  governance.mdx
docs/concepts/: agentic-rag.mdx  capabilities.mdx  errors.mdx  extensibility.mdx  initialization.mdx  lifecycle.mdx  message-format.mdx  pipeline.mdx  transports.mdx
docs/ecosystem/: mcp-acp.mdx  stack.mdx
docs/features/: batching.mdx  federation.mdx  metadata-filtering.mdx  observability.mdx  pagination.mdx  streaming-progress.mdx
docs/get-started/: architecture.mdx  introduction.mdx  quickstart.mdx
docs/methods/: catalog.mdx  embed.mdx  feedback.mdx  graph.mdx  index.mdx  memory.mdx  overview.mdx  query-transform.mdx  rerank.mdx  retrieve.mdx
docs/operating/: conformance.mdx  security.mdx
docs/reference/: changelog.mdx  glossary.mdx  schema.mdx  specification.mdx  versioning.mdx
docs/schema/: rcp-1.0.json
docs/scripts/: check-config.mjs  check-links.mjs  check-mdx.mjs  check-nav.mjs  lib.mjs  sync-schema.mjs
docs/sdks/: cpp.mdx  node.mdx  overview.mdx  python.mdx  rust.mdx
docs/spec/: rcp-1.0.html
examples/: example_client.py  example_server.py  whoosh_adapter.py  whoosh_adapter_LEAKS.md  whoosh_adapter_client.py
rfds/: 0000-template.md  README.md
schema/: rcp-1.0.json
sdk/cpp/: CMakeLists.txt  LICENSE  Makefile  README.md  vcpkg.json
sdk/cpp/cmake/: rcpConfig.cmake.in
sdk/cpp/examples/: example_client.cpp  example_federation.cpp  example_selector.cpp  example_server.cpp
sdk/cpp/include/: rcp.hpp
sdk/cpp/include/rcp/: client.hpp  federation.hpp  filter.hpp  protocol.hpp  selector.hpp  server.hpp  transport.hpp  types.hpp
sdk/cpp/tests/: test_types.cpp
sdk/node/: README.md  package.json  test.js
sdk/node/examples/: example_client.js  example_server.js
sdk/node/src/: client.js  filter.js  index.js  selector.js  server.js  transport.js  types.js
sdk/python/: README.md  pyproject.toml  setup.py  test_bindings.py
sdk/python/rcp/: __init__.py  _client.py  _filter.py  _selector.py  _server.py  _transport.py  _types.py
sdk/python/src/: bindings.cpp
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: example_client.rs  example_server.rs
sdk/rust/src/: client.rs  filter.rs  json.rs  lib.rs  selector.rs  server.rs  transport.rs  types.rs
sdk/rust/tests/: interop.rs
site/: README.md  astro.config.mjs  build_spec.py  package-lock.json  package.json
site/assets/: spec.css
site/plugins/: rehype-base-links.mjs  rehype-table-scroll.mjs
site/scripts/: gen-og.mjs  sync-schema.mjs  sync-spec.mjs
site/src/components/: Hero.astro
site/src/content/docs/: 404.md  index.mdx
site/src/content/docs/ecosystem/: mcp-acp.md  stack.mdx
site/src/content/docs/guides/: conformance.md  errors.md  federation.md  sdks.md
site/src/content/docs/start/: architecture.md  introduction.md  methods.md  quickstart.mdx
site/src/styles/: theme.css
spec/: rcp-1.0.md
