[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rcp-protocol"
version = "1.0.0"
description = "Retrieval Context Protocol — native Python SDK (pure standard library, no dependencies)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "RCP Working Group" }]
keywords = ["rcp", "rag", "retrieval", "protocol", "json-rpc", "mcp", "acp"]

[tool.setuptools]
packages = ["rcp"]

[project.urls]
Homepage = "https://rcp-6d6ef6d5.mintlify.site/"
Documentation = "https://rcp-6d6ef6d5.mintlify.site/"
Specification = "https://github.com/1ay1/rcp/blob/main/spec/rcp-1.0.md"
Source = "https://github.com/1ay1/rcp"
