[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rcp-protocol"
version = "1.0.0"
description = "Retrieval Context Protocol — native Python SDK (pure standard library, no dependencies)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "RCP Working Group" }]
keywords = ["rcp", "rag", "retrieval", "protocol", "json-rpc", "mcp", "acp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

[tool.setuptools]
packages = ["rcp"]

[project.urls]
Homepage = "https://rcp-6d6ef6d5.mintlify.site/"
Documentation = "https://rcp-6d6ef6d5.mintlify.site/"
Specification = "https://github.com/1ay1/rcp/blob/main/spec/rcp-1.0.md"
Source = "https://github.com/1ay1/rcp"
Changelog = "https://rcp-6d6ef6d5.mintlify.site/reference/changelog"
Issues = "https://github.com/1ay1/rcp/issues"
