[package]
name = "rcp-protocol"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
description = "Retrieval Context Protocol — native Rust SDK (zero dependencies)"
license = "MIT"
repository = "https://github.com/1ay1/rcp"
homepage = "https://rcp-6d6ef6d5.mintlify.site/"
documentation = "https://docs.rs/rcp-protocol"
readme = "README.md"
keywords = ["rcp", "rag", "retrieval", "json-rpc", "mcp"]
categories = ["api-bindings", "text-processing"]
include = ["src/**/*", "examples/**/*", "README.md", "LICENSE"]

[lib]
name = "rcp"
path = "src/lib.rs"

# Zero dependencies: the SDK is built entirely on the Rust standard library.
[dependencies]

[[example]]
name = "example_server"
path = "examples/example_server.rs"

[[example]]
name = "example_client"
path = "examples/example_client.rs"
